Update index.html packages

--- a/index.html
+++ b/index.html
@@ -37,21 +37,42 @@
     <main>
         <section id="home">
             <h2>Welcome to Preston's Auto Detailing</h2>
-            <p>We offer top-notch car detailing services to make your vehicle shine like new.</p>
+            <p>I offer top-notch car detailing services to make your vehicle look straight out of the dealership.</p>
             <button>Contact Us</button>
         </section>
 
         <section id="services">
             <h2>Our Services</h2>
             <ul>
-                <li>Exterior Detailing</li>
-                <li>Interior Detailing</li>
-                <li>Paint Correction</li>
-                <li>Wheel and Tire Care</li>
-                <li>Headlight Restoration</li>
+                <p> Our services include Our Basic and Premium Packages</p>
+        </section>
+<main>
+        <section id="silver-package">
+            <h2>Silver Package</h2>
+            <ul>
+                <li>Exterior Wash</li>
+                <li>Tire Cleaning</li>
+                <li>Vacuuming</li>
+                <li>Glass Cleaning</li>
             </ul>
+            <p class="price">$99.99</p>
+            <button>Book Now</button>
         </section>
 
+        <section id="gold-package">
+            <h2>Gold Package</h2>
+            <ul>
+                <li>Exterior Wash</li>
+                <li>Tire Cleaning</li>
+                <li>Vacuuming</li>
+                <li>Glass Cleaning</li>
+                <li>Interior Detailing</li>
+                <li>Waxing</li>
+            </ul>
+            <p class="price">$199.99</p>
+            <button>Book Now</button>
+        </section>
+    </main>
         <section id="gallery">
             <h2>Gallery</h2>
             <div class="image-gallery">
