Update index.html About my services

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <section id="home">
             <h2>Welcome to Preston's Auto Detailing</h2>
             <p>I offer top-notch car detailing services to make your vehicle look straight out of the dealership.</p>
+            <p>Detailing is more than just washing your car, I make sure to clean and protect as many surfaces as possible to keep your car in peak condition</p>
             <button>Contact Us</button>
         </section>
 
