Update index.html Center title

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preston's Auto Detailing</title>
     <style> 
+        .centered-text {
+            text-align: center;
+            line-height: 200px; /* Adjust this value to center the text vertically */
+            height: 200px; /* Adjust this value to set the height of the div */
+            border: 1px solid #ccc; /* Just for illustration purposes */
      body {
             /* Change the font to a web-safe font */
             font-family: Arial, sans-serif;
