Update index.html images and links

--- a/index.html
+++ b/index.html
@@ -89,21 +89,9 @@
 
         <section id="contact">
             <h2>Contact Us</h2>
-            <form>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="phone">Phone:</label>
-                <input type="tel" id="phone" name="phone" required>
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="4" required></textarea>
-
-                <button type="submit">Send Message</button>
-            </form>
+            <a href="URL_of_the_destination_page">
+    <img src="https://scontent-sjc3-1.cdninstagram.com/v/t51.2885-19/361707120_2116967395140288_862318267906273660_n.jpg?stp=dst-jpg_s150x150&_nc_ht=scontent-sjc3-1.cdninstagram.com&_nc_cat=100&_nc_ohc=eaYP2vbMTNQAX95QYBR&edm=ACWDqb8BAAAA&ccb=7-5&oh=00_AfDWWow5XJ4X9mS2PKSftR_hHxeElMtbwI2NW0E3SyhUwg&oe=64D2D042&_nc_sid=ee9879" alt="Logo" width="200" height="200">
+</a>
         </section>
     </main>
 
